fixed homepage navbar

--- a/committees-gallery.html
+++ b/committees-gallery.html
@@ -12,12 +12,12 @@
       integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./gallery-style.css" />
     <title>AMIMUN '21</title>
   </head>
   <body>
-    <!-- navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
+     <!-- navbar -->
+   <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
       <div class="container-fluid">
         <a class="navbar-brand mx-1" href="index.html"
           ><img src="./static/logo-main.svg" width="55px" alt=""
@@ -73,7 +73,7 @@
             </li>
             <li class="nav-item dropdown">
               <a
-                class="nav-link dropdown-toggle "
+                class="nav-link dropdown-toggle"
                 href="#"
                 id="navbarDropdownMenuLink"
                 role="button"
@@ -124,153 +124,186 @@
       </div>
     </nav>
 
-    <div class="album py-5 mt-5" style="background-color: #f7ece2">
-      <div class="container" style="background-color: #f7ece2">
-        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
-          <div class="col">
-            <div class="card shadow-lg rounded">
-              <img
-                class="d-block img-fluid"
-                style="background-color: #f5a98c"
-                src="./delegates-logo/un-white.png"
-                alt=""
-              />
-              <div class="card-body" style="background-color: #fff">
-                <h3>United Nations General Assembly-1</h3>
-                <p class="card-text">
-                  This is a wider card with supporting text below as a natural
-                  lead-in to additional content. 
-                </p>
-                <div class="d-flex justify-content-between align-items-center">
-                  <div class="btn-group">
-                    <a class="btn btn-outline-secondary" href="./delegates/ga.html">
-                      Read more
-                    </a>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col">
-            <div class="card shadow-lg">
-              <img
-                class="d-block img-fluid py-4 px-3 pb-5"
-                style="background-color: #f5a98c"
-                src="./delegates-logo/wha.png"
-                alt=""
-              />
-              <div class="card-body" style="background-color: #fff">
-                <h3>World Health Assembly</h3>
-                <p class="card-text">
-                  This is a wider card with supporting text below as a natural
-                  lead-in to additional content. This content is a little bit
-                  longer.
-                </p>
-                <div class="d-flex justify-content-between align-items-center">
-                  <div class="btn-group">
-                    <a class="btn btn-outline-secondary" href="./delegates/wha.html">
-                      Read more
-                    </a>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col">
-            <div class="card shadow-lg">
-              <img
-                class="d-block img-fluid p-4"
-                style="background-color: #f5a98c"
-                src="./delegates-logo/ctc.png"
-                alt=""
-              />
-              <div class="card-body" style="background-color: #fff">
-                <h3>Counter Terrorism Committee</h3>
-                <p class="card-text">
-                  This is a wider card with supporting text below as a natural
-                  lead-in to additional content. This content is a little bit
-                  longer.
-                </p>
-                <div class="d-flex justify-content-between align-items-center">
-                  <div class="btn-group">
-                    <a class="btn btn-outline-secondary" href="./delegates/ctc.html">
-                      Read more
-                    </a>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
 
-          <div class="col">
-            <div class="card shadow-lg">
-              <img
-                class="d-block img-fluid"
-                style="background-color: lightcoral"
-                src="./delegates-logo/unhrc-white.png"
-                alt=""
-              />
-              <div class="card-body" style="background-color: #fff">
-                <h3>United Nation Human Right Council</h3>
-                <p class="card-text">
-                  This is a wider card with supporting text below as a natural
-                  lead-in to additional content.
-                </p>
-                <div class="d-flex justify-content-between align-items-center">
-                  <div class="btn-group">
-                    <a class="btn btn-outline-secondary" href="./delegates/hrc.html">
-                      Read more
-                    </a>
+    <main class="container m-auto">
+      <div class=" py-5 mt-5" style="background-color: #f7ece2">
+        <div class="container" style="background-color: #f7ece2">
+          <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+            <div class="col">
+              <div class="card shadow-lg rounded">
+                <img
+                  class="d-block img-fluid"
+                  style="background-color: #f5a98c"
+                  src="./delegates-logo/un-white.png"
+                  alt=""
+                />
+                <div class="card-body" style="background-color: #fff">
+                  <h3>United Nations General Assembly</h3>
+                  <p class="card-text">
+                    This is a wider card with supporting text below as a natural
+                    lead-in to additional content.
+                  </p>
+                  <div
+                    class="d-flex justify-content-between align-items-center"
+                  >
+                    <div class="btn-group">
+                      <a
+                        class="btn btn-outline-secondary"
+                        href="./delegates/ga.html"
+                      >
+                        Read more
+                      </a>
+                    </div>
                   </div>
                 </div>
               </div>
             </div>
-          </div>
-          <div class="col">
-            <div class="card shadow-lg">
-              <img
-                class="d-block img-fluid"
-                style="background-color: lightcoral"
-                src="./delegates-logo/aippm-ip.png"
-                alt=""
-              />
-              <div class="card-body" style="background-color: #fff">
-                <h3>All India Political Parties Meet</h3>
-                <p class="card-text">
-                  This is a wider card with supporting text below as a natural
-                  lead-in to additional content. This content is a little bit
-                  longer.
-                </p>
-                <div class="d-flex justify-content-between align-items-center">
-                  <div class="btn-group">
-                    <a class="btn btn-outline-secondary" href="./delegates/aippm.html">
-                      Read more
-                    </a>
+            <div class="col">
+              <div class="card shadow-lg">
+                <img
+                  class="d-block img-fluid py-4 px-3 pb-5"
+                  style="background-color: #f5a98c"
+                  src="./delegates-logo/wha.png"
+                  alt=""
+                />
+                <div class="card-body" style="background-color: #fff">
+                  <h3>World Health Assembly</h3>
+                  <p class="card-text">
+                    This is a wider card with supporting text below as a natural
+                    lead-in to additional content. This content is a little bit
+                    longer.
+                  </p>
+                  <div
+                    class="d-flex justify-content-between align-items-center"
+                  >
+                    <div class="btn-group">
+                      <a
+                        class="btn btn-outline-secondary"
+                        href="./delegates/wha.html"
+                      >
+                        Read more
+                      </a>
+                    </div>
                   </div>
                 </div>
               </div>
             </div>
-          </div>
-          <div class="col">
-            <div class="card shadow-lg">
-              <img
-                class="d-block img-fluid"
-                style="background-color: lightcoral"
-                src="./delegates-logo/ip-white.png"
-                alt=""
-              />
-              <div class="card-body" style="background-color: #fff">
-                <h3>International Press Corps</h3>
-                <p class="card-text">
-                  This is a wider card with supporting text below as a natural
-                  lead-in to additional content. This content is a little bit
-                  longer.
-                </p>
-                <div class="d-flex justify-content-between align-items-center">
-                  <div class="btn-group">
-                    <a class="btn btn-outline-secondary" href="./delegates/ip.html">
-                      Read more
-                    </a>
+            <div class="col">
+              <div class="card shadow-lg">
+                <img
+                  class="d-block img-fluid p-4"
+                  style="background-color: #f5a98c"
+                  src="./delegates-logo/ctc.png"
+                  alt=""
+                />
+                <div class="card-body" style="background-color: #fff">
+                  <h3>Counter Terrorism Committee</h3>
+                  <p class="card-text">
+                    This is a wider card with supporting text below as a natural
+                    lead-in to additional content. This content is a little bit
+                    longer.
+                  </p>
+                  <div
+                    class="d-flex justify-content-between align-items-center"
+                  >
+                    <div class="btn-group">
+                      <a
+                        class="btn btn-outline-secondary"
+                        href="./delegates/ctc.html"
+                      >
+                        Read more
+                      </a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="col">
+              <div class="card shadow-lg">
+                <img
+                  class="d-block img-fluid"
+                  style="background-color: lightcoral"
+                  src="./delegates-logo/unhrc-white.png"
+                  alt=""
+                />
+                <div class="card-body" style="background-color: #fff">
+                  <h3>United Nation Human Right Council</h3>
+                  <p class="card-text">
+                    This is a wider card with supporting text below as a natural
+                    lead-in to additional content.
+                  </p>
+                  <div
+                    class="d-flex justify-content-between align-items-center"
+                  >
+                    <div class="btn-group">
+                      <a
+                        class="btn btn-outline-secondary"
+                        href="./delegates/hrc.html"
+                      >
+                        Read more
+                      </a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card shadow-lg">
+                <img
+                  class="d-block img-fluid"
+                  style="background-color: lightcoral"
+                  src="./delegates-logo/aippm-ip.png"
+                  alt=""
+                />
+                <div class="card-body" style="background-color: #fff">
+                  <h3>All India Political Parties Meet</h3>
+                  <p class="card-text">
+                    This is a wider card with supporting text below as a natural
+                    lead-in to additional content. This content is a little bit
+                    longer.
+                  </p>
+                  <div
+                    class="d-flex justify-content-between align-items-center"
+                  >
+                    <div class="btn-group">
+                      <a
+                        class="btn btn-outline-secondary"
+                        href="./delegates/aippm.html"
+                      >
+                        Read more
+                      </a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card shadow-lg">
+                <img
+                  class="d-block img-fluid"
+                  style="background-color: lightcoral"
+                  src="./delegates-logo/ip-white.png"
+                  alt=""
+                />
+                <div class="card-body" style="background-color: #fff">
+                  <h3>International Press Corps</h3>
+                  <p class="card-text">
+                    This is a wider card with supporting text below as a natural
+                    lead-in to additional content. This content is a little bit
+                    longer.
+                  </p>
+                  <div
+                    class="d-flex justify-content-between align-items-center"
+                  >
+                    <div class="btn-group">
+                      <a
+                        class="btn btn-outline-secondary"
+                        href="./delegates/ip.html"
+                      >
+                        Read more
+                      </a>
+                    </div>
                   </div>
                 </div>
               </div>
@@ -278,7 +311,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </main>
 
     <!-- FOOTER -->
     <footer class="container">
