--- a/register/ip_register.html
+++ b/register/ip_register.html
@@ -87,19 +87,17 @@
                 <li>
                   <a
                     class="dropdown-item"
-                    href="./messages/delegate_register.html"
+                    href="../messages/advisory-board.html"
                     >Advisory Board</a
                   >
                 </li>
                 <li>
-                  <a
-                    class="dropdown-item"
-                    href="./messages/delegate_register.html"
+                  <a class="dropdown-item" href="../messages/sec.html"
                     >Secretariat</a
                   >
                 </li>
                 <li>
-                  <a class="dropdown-item" href="./messages/ip_register.html"
+                  <a class="dropdown-item" href="../messages/org-com.html"
                     >Organising Committee</a
                   >
                 </li>
