--- a/register/delegate_register.html
+++ b/register/delegate_register.html
@@ -58,9 +58,7 @@
                 aria-labelledby="navbarDropdownMenuLink"
               >
                 <li>
-                  <a
-                    class="dropdown-item"
-                    href="delegate_register.html"
+                  <a class="dropdown-item" href="delegate_register.html"
                     >Delegate Application</a
                   >
                 </li>
@@ -89,26 +87,26 @@
                 <li>
                   <a
                     class="dropdown-item"
-                    href="./messages/delegate_register.html"
+                    href="../messages/advisory-board.html"
                     >Advisory Board</a
                   >
                 </li>
                 <li>
-                  <a
-                    class="dropdown-item"
-                    href="./messages/delegate_register.html"
+                  <a class="dropdown-item" href="../messages/sec.html"
                     >Secretariat</a
                   >
                 </li>
                 <li>
-                  <a class="dropdown-item" href="./messages/ip_register.html"
+                  <a class="dropdown-item" href="../messages/org-com.html"
                     >Organising Committee</a
                   >
                 </li>
               </ul>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="../committees-gallery.html">Committees</a>
+              <a class="nav-link" href="../committees-gallery.html"
+                >Committees</a
+              >
             </li>
             <li class="nav-item">
               <a class="nav-link" href="../gallery.html">Gallery</a>
