optimized images and added pics in gallery

--- a/index.html
+++ b/index.html
@@ -87,16 +87,12 @@
                 aria-labelledby="navbarDropdownMenuLink"
               >
                 <li>
-                  <a
-                    class="dropdown-item"
-                    href="./messages/advisory-board.html"
+                  <a class="dropdown-item" href="./messages/advisory-board.html"
                     >Advisory Board</a
                   >
                 </li>
                 <li>
-                  <a
-                    class="dropdown-item"
-                    href="./messages/sec.html"
+                  <a class="dropdown-item" href="./messages/sec.html"
                     >Secretariat</a
                   >
                 </li>
@@ -310,6 +306,125 @@
           </div>
         </div>
         <!-- START THE FEATURETTES -->
+        <div class="container marketing mt-5">
+          <!-- START THE FEATURETTES -->
+          <h1 class="m-5 text-center">MESSAGE</h1>
+          <hr class="featurette-divider mt-5" />
+          <div class="row featurette">
+            <div class="col-md-7">
+              <h2 class="featurette-heading">
+                Absolute
+                <span class="text-muted">Commitment</span>
+              </h2>
+              <p class="lead">
+                The Secretariat of Amity International Model United Nations
+                Conference consists of individuals who have consistently proven
+                themselves to be hardworking and knowledgeable. Each person was
+                handpicked for ensuring AMIMUN's ideals are upheld and executed
+                with the utmost dedication. Time and again they have ensured the
+                smooth running of all the committees, while simultaneously
+                maintaining the highest level of hospitality. Thus, we know our
+                promise of quality will be diligently followed, guaranteeing an
+                enriching experience for all who attend.
+              </p>
+            </div>
+            <div class="col-md-5">
+              <img class="d-block img-fluid" src="./static/img-2.JPG" alt="" />
+            </div>
+          </div>
+
+          <hr class="featurette-divider" />
+
+          <div class="row featurette">
+            <div class="col-md-7 order-md-2">
+              <h2 class="featurette-heading">
+                International
+                <span class="text-muted">Platform</span>
+              </h2>
+              <p class="lead">
+                Amity is made up of a multitude of people, from various
+                backgrounds, interact and work with one another. AMIMUN takes
+                advantage of this, allowing for a huge international platform,
+                where ideas can be propagated, opinions formed, and views
+                widened. Past editions of AMIMUN have been conducted in
+                association with international bodies like the United Nations
+                Information Centre for India and Bhutan (UNIC), Medecins Sans
+                Frontieres, and Amnesty International India, and included
+                delegates and dignitaries from Europe. AMIMUN truly is the best
+                place to not only to showcase one's talent but further grow as a
+                delegate and an individual.
+              </p>
+            </div>
+            <div class="col-md-5 order-md-1">
+              <img
+                class="d-block img-fluid"
+                src="./static/DSC_0567-min.JPG"
+                alt=""
+              />
+            </div>
+          </div>
+
+          <hr class="featurette-divider" />
+
+          <div class="row featurette">
+            <div class="col-md-7">
+              <h2 class="featurette-heading">
+                Creativity <span class="text-muted">& Innovation</span>
+              </h2>
+              <p class="lead">
+                Amity is made up of a multitude of people, from various
+                backgrounds, interact and work with one another. AMIMUN takes
+                advantage of this, allowing for a huge international platform,
+                where ideas can be propagated, opinions formed, and views
+                widened. Past editions of AMIMUN have been conducted in
+                association with international bodies like the United Nations
+                Information Centre for India and Bhutan (UNIC), Medecins Sans
+                Frontieres, and Amnesty International India, and included
+                delegates and dignitaries from Europe. AMIMUN truly is the best
+                place to not only to showcase one's talent but further grow as a
+                delegate and an individual.
+              </p>
+            </div>
+            <div class="col-md-5">
+              <img
+                class="d-block img-fluid"
+                src="./static/DSC_0360-min.JPG"
+                alt=""
+              />
+            </div>
+          </div>
+          <hr class="featurette-divider" />
+          <div class="row featurette">
+            <div class="col-md-7 order-md-2">
+              <h2 class="featurette-heading">
+                International
+                <span class="text-muted">Platform</span>
+              </h2>
+              <p class="lead">
+                Amity is made up of a multitude of people, from various
+                backgrounds, interact and work with one another. AMIMUN takes
+                advantage of this, allowing for a huge international platform,
+                where ideas can be propagated, opinions formed, and views
+                widened. Past editions of AMIMUN have been conducted in
+                association with international bodies like the United Nations
+                Information Centre for India and Bhutan (UNIC), Medecins Sans
+                Frontieres, and Amnesty International India, and included
+                delegates and dignitaries from Europe. AMIMUN truly is the best
+                place to not only to showcase one's talent but further grow as a
+                delegate and an individual.
+              </p>
+            </div>
+            <div class="col-md-5 order-md-1">
+              <img
+                class="d-block img-fluid"
+                src="./static/DSC_0567-min.JPG"
+                alt=""
+              />
+            </div>
+          </div>
+        </div>
+
+        <hr class="featurette-divider" />
         <!-- /END THE FEATURETTES -->
 
         <!-- Three columns of text below the carousel -->
