--- a/about.html
+++ b/about.html
@@ -184,7 +184,7 @@
           <div class="col-md-5">
             <img
               class="d-block img-fluid"
-              src="./static/img-2-500x500.JPG"
+              src="./static/img-2.JPG"
               alt=""
             />
           </div>
@@ -214,7 +214,7 @@
           <div class="col-md-5 order-md-1">
             <img
               class="d-block img-fluid"
-              src="./static/img-6-500x500.jpeg"
+              src="./static/DSC_0567-min.JPG"
               alt=""
             />
           </div>
@@ -243,7 +243,7 @@
           <div class="col-md-5">
             <img
               class="d-block img-fluid"
-              src="./static/img-3-500x500.JPG"
+              src="./static/DSC_0360-min.JPG"
               alt=""
             />
           </div>
@@ -294,7 +294,7 @@
           <div class="col-md-5">
             <img
               class="d-block img-fluid"
-              src="./static/8.jpg"
+              src="./static/DSC_4294-min.JPG"
               alt=""
             />
           </div>
