--- a/index.html
+++ b/index.html
@@ -313,9 +313,10 @@
           <div class="row featurette">
             <div class="col-md-7">
               <h2 class="featurette-heading">
-                Absolute
-                <span class="text-muted">Commitment</span>
+                Mr. Ashok
+                <span class="text-muted">Chauhan</span>
               </h2>
+              <h5>Founder</h5>
               <p class="lead">
                 The Secretariat of Amity International Model United Nations
                 Conference consists of individuals who have consistently proven
@@ -329,7 +330,7 @@
               </p>
             </div>
             <div class="col-md-5">
-              <img class="d-block img-fluid" src="./static/img-2.JPG" alt="" />
+              <img class="d-block img-fluid" src="./static/ashok.jpg" alt="" />
             </div>
           </div>
 
@@ -338,9 +339,10 @@
           <div class="row featurette">
             <div class="col-md-7 order-md-2">
               <h2 class="featurette-heading">
-                International
-                <span class="text-muted">Platform</span>
+                Mr. Ashok
+                <span class="text-muted">Chauhan</span>
               </h2>
+              <h5>Chancellor</h5>
               <p class="lead">
                 Amity is made up of a multitude of people, from various
                 backgrounds, interact and work with one another. AMIMUN takes
@@ -358,7 +360,7 @@
             <div class="col-md-5 order-md-1">
               <img
                 class="d-block img-fluid"
-                src="./static/DSC_0567-min.JPG"
+                src="./static/DrAtulChauhan.jpg"
                 alt=""
               />
             </div>
@@ -368,9 +370,11 @@
 
           <div class="row featurette">
             <div class="col-md-7">
-              <h2 class="featurette-heading">
-                Creativity <span class="text-muted">& Innovation</span>
+             <h2 class="featurette-heading">
+                Dr. Balvinder
+                <span class="text-muted">Shukla</span>
               </h2>
+              <h5>Founder</h5>
               <p class="lead">
                 Amity is made up of a multitude of people, from various
                 backgrounds, interact and work with one another. AMIMUN takes
@@ -388,7 +392,7 @@
             <div class="col-md-5">
               <img
                 class="d-block img-fluid"
-                src="./static/DSC_0360-min.JPG"
+                src="./static/bal.jpg"
                 alt=""
               />
             </div>
@@ -397,9 +401,10 @@
           <div class="row featurette">
             <div class="col-md-7 order-md-2">
               <h2 class="featurette-heading">
-                International
-                <span class="text-muted">Platform</span>
+                Ms. Natasha
+                <span class="text-muted">Hasteer</span>
               </h2>
+              <h5>[ENTER ROLE]</h5>
               <p class="lead">
                 Amity is made up of a multitude of people, from various
                 backgrounds, interact and work with one another. AMIMUN takes
@@ -417,7 +422,7 @@
             <div class="col-md-5 order-md-1">
               <img
                 class="d-block img-fluid"
-                src="./static/DSC_0567-min.JPG"
+                src="./static/nat.jpg"
                 alt=""
               />
             </div>
