--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
               <a class="nav-link text-white" href="#">AMIMUN Club</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white" href="#">Contact Us</a>
+              <a class="nav-link text-white" href="./contact.html">Contact Us</a>
             </li>
           </ul>
         </div>
