--- a/about.html
+++ b/about.html
@@ -304,6 +304,180 @@
 
         <!-- /END THE FEATURETTES -->
       </div>
+       <div class="p-5 mt-5 text-grey rounded" style="background-color: #f5a98c">
+        <div class="px-0">
+          <h1 class="display-4 font-italic">
+            Amity International Model United Nations
+          </h1>
+          <p class="lead my-3">
+            Amity International Model United Nations is a simulation of the
+            United Nations spanning over three days. At AMIMUN, delegates gain
+            in-depth knowledge of diplomacy, international relations, and the
+            inner workings of the United Nations. Currently, in it's Ninth
+            Edition, AMIMUN has set a certain standard for the conduct of MUNs
+            throughout the Nation with its innovative themes, focus on pertinent
+            issues and stellar level of debate. Through debating issues that
+            confront world leaders and drafting resolutions, one can enhance
+            their critical thinking, public speaking and leadership skills.
+            Moreover, the combination of the depth of research required and the
+            understanding one must-have of others' views and attitudes, due to
+            the interactions with multitudes of other young minds from various
+            backgrounds, give the students a deep insight into the real-world
+            problems. They then become aware of the causes of conflict between
+            nations which leads them to a better understanding of the interests
+            and motivations of others. Thus, AMIMUN follows through with the
+            Preamble to the Charter of the United Nations: " To practise
+            tolerance and live together in peace with one another as good
+            neighbours " .
+          </p>
+        </div>
+      </div>
+       <div class="container marketing mt-5">
+        <!-- START THE FEATURETTES -->
+
+        <hr class="featurette-divider" />
+
+        <div class="row featurette">
+          <div class="col-md-7">
+            <h2 class="featurette-heading">
+              Absolute
+              <span class="text-muted">Commitment</span>
+            </h2>
+            <p class="lead">
+              The Secretariat of Amity International Model United Nations
+              Conference consists of individuals who have consistently proven
+              themselves to be hardworking and knowledgeable. Each person was
+              handpicked for ensuring AMIMUN's ideals are upheld and
+              executed with the utmost dedication. Time and again they have
+              ensured the smooth running of all the committees, while
+              simultaneously maintaining the highest level of hospitality. Thus,
+              we know our promise of quality will be diligently followed,
+              guaranteeing an enriching experience for all who attend.
+            </p>
+          </div>
+          <div class="col-md-5">
+            <img
+              class="d-block img-fluid"
+              src="./static/img-2.JPG"
+              alt=""
+            />
+          </div>
+        </div>
+
+        <hr class="featurette-divider" />
+
+        <div class="row featurette">
+          <div class="col-md-7 order-md-2">
+            <h2 class="featurette-heading">
+              International
+              <span class="text-muted">Platform</span>
+            </h2>
+            <p class="lead">
+              Amity is made up of a multitude of people, from various
+              backgrounds, interact and work with one another. AMIMUN takes
+              advantage of this, allowing for a huge international platform,
+              where ideas can be propagated, opinions formed, and views widened.
+              Past editions of AMIMUN have been conducted in association with
+              international bodies like the United Nations Information Centre
+              for India and Bhutan (UNIC), Medecins Sans Frontieres, and Amnesty
+              International India, and included delegates and dignitaries from
+              Europe. AMIMUN truly is the best place to not only to showcase
+              one's talent but further grow as a delegate and an individual.
+            </p>
+          </div>
+          <div class="col-md-5 order-md-1">
+            <img
+              class="d-block img-fluid"
+              src="./static/DSC_0567-min.JPG"
+              alt=""
+            />
+          </div>
+        </div>
+
+        <hr class="featurette-divider" />
+
+        <div class="row featurette">
+          <div class="col-md-7">
+            <h2 class="featurette-heading">
+              Creativity <span class="text-muted">& Innovation</span>
+            </h2>
+            <p class="lead">
+              Amity is made up of a multitude of people, from various
+              backgrounds, interact and work with one another. AMIMUN takes
+              advantage of this, allowing for a huge international platform,
+              where ideas can be propagated, opinions formed, and views widened.
+              Past editions of AMIMUN have been conducted in association with
+              international bodies like the United Nations Information Centre
+              for India and Bhutan (UNIC), Medecins Sans Frontieres, and Amnesty
+              International India, and included delegates and dignitaries from
+              Europe. AMIMUN truly is the best place to not only to showcase
+              one's talent but further grow as a delegate and an individual.
+            </p>
+          </div>
+          <div class="col-md-5">
+            <img
+              class="d-block img-fluid"
+              src="./static/DSC_0360-min.JPG"
+              alt=""
+            />
+          </div>
+        </div>
+
+        <hr class="featurette-divider" />
+
+        <div class="row featurette">
+          <div class="col-md-7 order-md-2">
+            <h2 class="featurette-heading">
+              Brush
+              <span class="text-muted">Up Ingenuity</span>
+            </h2>
+            <p class="lead">
+              As the 9th edition approaches, the excellence of AMIMUN enhances.
+              It provides with finest delegates to keep up with the competition.
+              Moreover, this will develop and enhance skills to negotiate,
+              articulate and market ideas. AMIMUN will foster the critical and
+              analytical thought process to spontaneously come up with solutions
+              to some grave world problems.
+            </p>
+          </div>
+          <div class="col-md-5 order-md-1">
+            <img
+              class="d-block img-fluid"
+              src="./static/5.jpg"
+              alt=""
+            />
+          </div>
+        </div>
+
+        <hr class="featurette-divider" />
+
+        <div class="row featurette">
+          <div class="col-md-7">
+            <h2 class="featurette-heading">
+              Engaging <span class="text-muted">& Paramount Motions</span>
+            </h2>
+            <p class="lead">
+              The dedicated AMIMUN fraternity will bring forth the most engaging
+              motions aimed to facilitate the highest quality of debate. It will
+              provide with a truly holistic educational experience and raise
+              awareness. Moreover, the challenging global issues will stretch
+              the general knowledge of the participants while, sensitising them
+              to the intricate obstacles of being a global leader.
+            </p>
+          </div>
+          <div class="col-md-5">
+            <img
+              class="d-block img-fluid"
+              src="./static/DSC_4294-min.JPG"
+              alt=""
+            />
+          </div>
+        </div>
+
+        <hr class="featurette-divider" />
+
+        <!-- /END THE FEATURETTES -->
+      </div>
       <!-- /.container -->
 
       <!-- FOOTER -->
