added map in contact page

--- a/contact.html
+++ b/contact.html
@@ -110,7 +110,9 @@
               </ul>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="../committees-gallery.html">Committees</a>
+              <a class="nav-link" href="../committees-gallery.html"
+                >Committees</a
+              >
             </li>
             <li class="nav-item">
               <a class="nav-link" href="../gallery.html">Gallery</a>
@@ -299,9 +301,20 @@
           </div>
         </div>
       </div>
+      <iframe
+      class="container mb-5"
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3504.8605622545974!2d77.33091981556557!3d28.54391058245284!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390ce44e80a9461b%3A0x302ec8d3d5cb8d1a!2sAmity%20University%20Noida!5e0!3m2!1sen!2sus!4v1612112348525!5m2!1sen!2sus"
+        width="600"
+        height="450"
+        frameborder="0"
+        style="border: 0"
+        allowfullscreen=""
+        aria-hidden="false"
+        tabindex="0"
+      ></iframe>
 
       <!-- FOOTER -->
-      <footer class="container">
+      <footer class="container mt-5">
         <p class="float-end"><a href="#">Back to top</a></p>
         <p>
           © 2017-2021 Company, Inc. · <a href="#">Privacy</a> ·
@@ -309,7 +322,7 @@
         </p>
       </footer>
     </main>
-    <script src="app.js"></script>
+
     <!-- <div class="container"></div> -->
 
     <!-- Optional JavaScript; choose one of the two! -->
