--- a/committees-gallery.html
+++ b/committees-gallery.html
@@ -200,8 +200,7 @@
                   <h3>Counter Terrorism Committee</h3>
                   <p class="card-text">
                     This is a wider card with supporting text below as a natural
-                    lead-in to additional content. This content is a little bit
-                    longer.
+                    lead-in to additional content.
                   </p>
                   <div
                     class="d-flex justify-content-between align-items-center"
