corrected navlink for contact

--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
     />
-    <link rel="stylesheet" href="../gallery-style.css" />
+    <link rel="stylesheet" href="./gallery-style.css" />
     <title>AMIMUN '21</title>
   </head>
   <body>
@@ -24,7 +24,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
       <div class="container-fluid">
         <a class="navbar-brand mx-1" href="index.html"
-          ><img src="../static/logo-main.svg" width="55px" alt=""
+          ><img src="./static/logo-main.svg" width="55px" alt=""
         /></a>
         <button
           class="navbar-toggler"
@@ -44,7 +44,7 @@
         >
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="../about.html">About</a>
+              <a class="nav-link" href="./about.html">About</a>
             </li>
             <li class="nav-item dropdown">
               <a
@@ -64,12 +64,12 @@
                 <li>
                   <a
                     class="dropdown-item"
-                    href="../register/delegate_register.html"
+                    href="./register/delegate_register.html"
                     >Delegate Application</a
                   >
                 </li>
                 <li>
-                  <a class="dropdown-item" href="../register/ip_register.html"
+                  <a class="dropdown-item" href="./register/ip_register.html"
                     >International Press Application</a
                   >
                 </li>
@@ -93,35 +93,35 @@
                 <li>
                   <a
                     class="dropdown-item"
-                    href="../messages/advisory-board.html"
+                    href="./messages/advisory-board.html"
                     >Advisory Board</a
                   >
                 </li>
                 <li>
-                  <a class="dropdown-item" href="../messages/sec.html"
+                  <a class="dropdown-item" href="./messages/sec.html"
                     >Secretariat</a
                   >
                 </li>
                 <li>
-                  <a class="dropdown-item" href="../messages/org-com.html"
+                  <a class="dropdown-item" href="./messages/org-com.html"
                     >Organising Committee</a
                   >
                 </li>
               </ul>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="../committees-gallery.html"
+              <a class="nav-link" href="./committees-gallery.html"
                 >Committees</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="../gallery.html">Gallery</a>
+              <a class="nav-link" href="./gallery.html">Gallery</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">AMIMUN Club</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Contact Us</a>
+              <a class="nav-link" href="contact.html">Contact Us</a>
             </li>
           </ul>
         </div>
