fixed card length

--- a/committees-gallery.html
+++ b/committees-gallery.html
@@ -16,8 +16,8 @@
     <title>AMIMUN '21</title>
   </head>
   <body>
-     <!-- navbar -->
-   <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
+    <!-- navbar -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
       <div class="container-fluid">
         <a class="navbar-brand mx-1" href="index.html"
           ><img src="./static/logo-main.svg" width="55px" alt=""
@@ -87,16 +87,12 @@
                 aria-labelledby="navbarDropdownMenuLink"
               >
                 <li>
-                  <a
-                    class="dropdown-item"
-                    href="./messages/advisory-board.html"
+                  <a class="dropdown-item" href="./messages/advisory-board.html"
                     >Advisory Board</a
                   >
                 </li>
                 <li>
-                  <a
-                    class="dropdown-item"
-                    href="./messages/sec.html"
+                  <a class="dropdown-item" href="./messages/sec.html"
                     >Secretariat</a
                   >
                 </li>
@@ -124,16 +120,16 @@
       </div>
     </nav>
 
-
     <main class="container m-auto">
-      <div class=" py-5 mt-5" style="background-color: #f7ece2">
+      <h1 class="text-center">Committees</h1>
+      <div class="py-5 mt-5" style="background-color: #f7ece2">
         <div class="container" style="background-color: #f7ece2">
           <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
             <div class="col">
-              <div class="card shadow-lg rounded">
+              <div class="card shadow-lg">
                 <img
                   class="d-block img-fluid"
-                  style="background-color: #f5a98c"
+                  style="background-color: lightcoral"
                   src="./delegates-logo/un-white.png"
                   alt=""
                 />
@@ -158,11 +154,11 @@
                 </div>
               </div>
             </div>
-            <div class="col">
+            <div class="col col-lg-4 d-flex align-items-stretch">
               <div class="card shadow-lg">
                 <img
-                  class="d-block img-fluid py-4 px-3 pb-5"
-                  style="background-color: #f5a98c"
+                  class="d-block img-fluid p-4 pb-5"
+                  style="background-color: lightcoral"
                   src="./delegates-logo/wha.png"
                   alt=""
                 />
@@ -170,8 +166,7 @@
                   <h3>World Health Assembly</h3>
                   <p class="card-text">
                     This is a wider card with supporting text below as a natural
-                    lead-in to additional content. This content is a little bit
-                    longer.
+                    lead-in to additional content.
                   </p>
                   <div
                     class="d-flex justify-content-between align-items-center"
@@ -188,11 +183,11 @@
                 </div>
               </div>
             </div>
-            <div class="col">
+            <div class="col col-lg-4 d-flex align-items-stretch">
               <div class="card shadow-lg">
                 <img
-                  class="d-block img-fluid p-4"
-                  style="background-color: #f5a98c"
+                  class="d-block img-fluid"
+                  style="background-color: lightcoral"
                   src="./delegates-logo/ctc.png"
                   alt=""
                 />
@@ -218,7 +213,7 @@
               </div>
             </div>
 
-            <div class="col">
+            <div class="col col-lg-4 d-flex align-items-stretch">
               <div class="card shadow-lg">
                 <img
                   class="d-block img-fluid"
@@ -227,7 +222,7 @@
                   alt=""
                 />
                 <div class="card-body" style="background-color: #fff">
-                  <h3>United Nation Human Right Council</h3>
+                  <h3>United Nations Human Right Council</h3>
                   <p class="card-text">
                     This is a wider card with supporting text below as a natural
                     lead-in to additional content.
@@ -247,7 +242,7 @@
                 </div>
               </div>
             </div>
-            <div class="col">
+            <div class="col col-lg-4 d-flex align-items-stretch">
               <div class="card shadow-lg">
                 <img
                   class="d-block img-fluid"
@@ -259,8 +254,7 @@
                   <h3>All India Political Parties Meet</h3>
                   <p class="card-text">
                     This is a wider card with supporting text below as a natural
-                    lead-in to additional content. This content is a little bit
-                    longer.
+                    lead-in to additional content.
                   </p>
                   <div
                     class="d-flex justify-content-between align-items-center"
@@ -277,8 +271,8 @@
                 </div>
               </div>
             </div>
-            <div class="col">
-              <div class="card shadow-lg">
+            <div class="col col-lg-4 d-flex align-items-stretch">
+              <div class="card shadow-lg ">
                 <img
                   class="d-block img-fluid"
                   style="background-color: lightcoral"
@@ -287,10 +281,10 @@
                 />
                 <div class="card-body" style="background-color: #fff">
                   <h3>International Press Corps</h3>
+
                   <p class="card-text">
                     This is a wider card with supporting text below as a natural
-                    lead-in to additional content. This content is a little bit
-                    longer.
+                    lead-in to additional content.
                   </p>
                   <div
                     class="d-flex justify-content-between align-items-center"
