--- a/about.html
+++ b/about.html
@@ -73,7 +73,7 @@
             </li>
             <li class="nav-item dropdown">
               <a
-                class="nav-link dropdown-toggle "
+                class="nav-link dropdown-toggle"
                 href="#"
                 id="navbarDropdownMenuLink"
                 role="button"
@@ -87,16 +87,12 @@
                 aria-labelledby="navbarDropdownMenuLink"
               >
                 <li>
-                  <a
-                    class="dropdown-item"
-                    href="./messages/advisory-board.html"
+                  <a class="dropdown-item" href="./messages/advisory-board.html"
                     >Advisory Board</a
                   >
                 </li>
                 <li>
-                  <a
-                    class="dropdown-item"
-                    href="./messages/sec.html"
+                  <a class="dropdown-item" href="./messages/sec.html"
                     >Secretariat</a
                   >
                 </li>
@@ -173,20 +169,16 @@
               The Secretariat of Amity International Model United Nations
               Conference consists of individuals who have consistently proven
               themselves to be hardworking and knowledgeable. Each person was
-              handpicked for ensuring AMIMUN's ideals are upheld and
-              executed with the utmost dedication. Time and again they have
-              ensured the smooth running of all the committees, while
-              simultaneously maintaining the highest level of hospitality. Thus,
-              we know our promise of quality will be diligently followed,
-              guaranteeing an enriching experience for all who attend.
+              handpicked for ensuring AMIMUN's ideals are upheld and executed
+              with the utmost dedication. Time and again they have ensured the
+              smooth running of all the committees, while simultaneously
+              maintaining the highest level of hospitality. Thus, we know our
+              promise of quality will be diligently followed, guaranteeing an
+              enriching experience for all who attend.
             </p>
           </div>
           <div class="col-md-5">
-            <img
-              class="d-block img-fluid"
-              src="./static/img-2.JPG"
-              alt=""
-            />
+            <img class="d-block img-fluid" src="./static/img-2.JPG" alt="" />
           </div>
         </div>
 
@@ -267,11 +259,7 @@
             </p>
           </div>
           <div class="col-md-5 order-md-1">
-            <img
-              class="d-block img-fluid"
-              src="./static/5.jpg"
-              alt=""
-            />
+            <img class="d-block img-fluid" src="./static/5.jpg" alt="" />
           </div>
         </div>
 
@@ -304,35 +292,26 @@
 
         <!-- /END THE FEATURETTES -->
       </div>
-       <div class="p-5 mt-5 text-grey rounded" style="background-color: #f5a98c">
+      <div class="p-5 mt-5 text-grey rounded" style="background-color: #f5a98c">
         <div class="px-0">
-          <h1 class="display-4 font-italic">
-            Amity International Model United Nations
-          </h1>
+          <h1 class="display-4 font-italic">Amity University</h1>
           <p class="lead my-3">
-            Amity International Model United Nations is a simulation of the
-            United Nations spanning over three days. At AMIMUN, delegates gain
-            in-depth knowledge of diplomacy, international relations, and the
-            inner workings of the United Nations. Currently, in it's Ninth
-            Edition, AMIMUN has set a certain standard for the conduct of MUNs
-            throughout the Nation with its innovative themes, focus on pertinent
-            issues and stellar level of debate. Through debating issues that
-            confront world leaders and drafting resolutions, one can enhance
-            their critical thinking, public speaking and leadership skills.
-            Moreover, the combination of the depth of research required and the
-            understanding one must-have of others' views and attitudes, due to
-            the interactions with multitudes of other young minds from various
-            backgrounds, give the students a deep insight into the real-world
-            problems. They then become aware of the causes of conflict between
-            nations which leads them to a better understanding of the interests
-            and motivations of others. Thus, AMIMUN follows through with the
-            Preamble to the Charter of the United Nations: " To practise
-            tolerance and live together in peace with one another as good
-            neighbours " .
+            Our Vision Building the nation and the society through providing
+            total, integrated and trans-cultural quality education and to be the
+            global front runner in value education and nurturing talent in which
+            Modernity Blends with Tradition<br />
+            Our Mission To provide education at all levels in all disciplines of
+            modern times and in the futuristic and emerging frontier areas of
+            knowledge, learning and research and to develop the overall
+            personality of students by making them not only excellent
+            professionals but also good individuals, with understanding and
+            regard for human values, pride in their heritage and culture, a
+            sense of right and wrong and yearning for perfection and imbibe
+            attributes of courage of conviction and action.
           </p>
         </div>
       </div>
-       <div class="container marketing mt-5">
+      <div class="container marketing mt-5">
         <!-- START THE FEATURETTES -->
 
         <hr class="featurette-divider" />
@@ -340,27 +319,20 @@
         <div class="row featurette">
           <div class="col-md-7">
             <h2 class="featurette-heading">
-              Absolute
-              <span class="text-muted">Commitment</span>
+              Academic
+              <span class="text-muted">Excellence</span>
             </h2>
             <p class="lead">
-              The Secretariat of Amity International Model United Nations
-              Conference consists of individuals who have consistently proven
-              themselves to be hardworking and knowledgeable. Each person was
-              handpicked for ensuring AMIMUN's ideals are upheld and
-              executed with the utmost dedication. Time and again they have
-              ensured the smooth running of all the committees, while
-              simultaneously maintaining the highest level of hospitality. Thus,
-              we know our promise of quality will be diligently followed,
-              guaranteeing an enriching experience for all who attend.
+              University strives for the uncompromising quality and highest
+              standard of excellence in teaching, learning, research and
+              scholarship across various disciplines.University strives for the
+              uncompromising quality and highest standard of excellence in
+              teaching, learning, research and scholarship across various
+              disciplines.
             </p>
           </div>
           <div class="col-md-5">
-            <img
-              class="d-block img-fluid"
-              src="./static/img-2.JPG"
-              alt=""
-            />
+            <img class="d-block img-fluid" src="./static/img-2.JPG" alt="" />
           </div>
         </div>
 
@@ -369,8 +341,8 @@
         <div class="row featurette">
           <div class="col-md-7 order-md-2">
             <h2 class="featurette-heading">
-              International
-              <span class="text-muted">Platform</span>
+              Integrity
+              <span class="text-muted"> & Ethics </span>
             </h2>
             <p class="lead">
               Amity is made up of a multitude of people, from various
@@ -399,7 +371,7 @@
         <div class="row featurette">
           <div class="col-md-7">
             <h2 class="featurette-heading">
-              Creativity <span class="text-muted">& Innovation</span>
+              Diversity <span class="text-muted">& Mutual Respect</span>
             </h2>
             <p class="lead">
               Amity is made up of a multitude of people, from various
@@ -428,8 +400,8 @@
         <div class="row featurette">
           <div class="col-md-7 order-md-2">
             <h2 class="featurette-heading">
-              Brush
-              <span class="text-muted">Up Ingenuity</span>
+              Expand Horizons
+              <span class="text-muted">Of Knowledge</span>
             </h2>
             <p class="lead">
               As the 9th edition approaches, the excellence of AMIMUN enhances.
@@ -441,11 +413,7 @@
             </p>
           </div>
           <div class="col-md-5 order-md-1">
-            <img
-              class="d-block img-fluid"
-              src="./static/5.jpg"
-              alt=""
-            />
+            <img class="d-block img-fluid" src="./static/5.jpg" alt="" />
           </div>
         </div>
 
@@ -454,7 +422,53 @@
         <div class="row featurette">
           <div class="col-md-7">
             <h2 class="featurette-heading">
-              Engaging <span class="text-muted">& Paramount Motions</span>
+              Shared  <span class="text-muted">Governance</span>
+            </h2>
+            <p class="lead">
+              The dedicated AMIMUN fraternity will bring forth the most engaging
+              motions aimed to facilitate the highest quality of debate. It will
+              provide with a truly holistic educational experience and raise
+              awareness. Moreover, the challenging global issues will stretch
+              the general knowledge of the participants while, sensitising them
+              to the intricate obstacles of being a global leader.
+            </p>
+          </div>
+          <div class="col-md-5">
+            <img
+              class="d-block img-fluid"
+              src="./static/DSC_4294-min.JPG"
+              alt=""
+            />
+          </div>
+        </div>
+
+        <hr class="featurette-divider" />
+        <div class="row featurette">
+          <div class="col-md-7 order-md-2">
+            <h2 class="featurette-heading">
+              Expand Horizons
+              <span class="text-muted">Of Knowledge</span>
+            </h2>
+            <p class="lead">
+              As the 9th edition approaches, the excellence of AMIMUN enhances.
+              It provides with finest delegates to keep up with the competition.
+              Moreover, this will develop and enhance skills to negotiate,
+              articulate and market ideas. AMIMUN will foster the critical and
+              analytical thought process to spontaneously come up with solutions
+              to some grave world problems.
+            </p>
+          </div>
+          <div class="col-md-5 order-md-1">
+            <img class="d-block img-fluid" src="./static/5.jpg" alt="" />
+          </div>
+        </div>
+
+        <hr class="featurette-divider" />
+
+        <div class="row featurette">
+          <div class="col-md-7">
+            <h2 class="featurette-heading">
+              Social  <span class="text-muted">Responsibility</span>
             </h2>
             <p class="lead">
               The dedicated AMIMUN fraternity will bring forth the most engaging
