added Heading Card in committee section

--- a/committees-gallery.html
+++ b/committees-gallery.html
@@ -121,7 +121,15 @@
     </nav>
 
     <main class="container m-auto">
-      <h1 class="text-center">Committees</h1>
+      <div class="p-5 mt-5 text-grey rounded" style="background-color: #f5a98c">
+        <div class="px-0">
+          <h1 class="display-4 font-italic">Committees</h1>
+          <p class="lead my-3">
+            Amity International Model United Nations is a simulation of the
+            United Nations spanning over three days.
+          </p>
+        </div>
+      </div>
       <div class="py-5 mt-5" style="background-color: #f7ece2">
         <div class="container" style="background-color: #f7ece2">
           <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
@@ -272,7 +280,7 @@
               </div>
             </div>
             <div class="col col-lg-4 d-flex align-items-stretch">
-              <div class="card shadow-lg ">
+              <div class="card shadow-lg">
                 <img
                   class="d-block img-fluid"
                   style="background-color: lightcoral"
